Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-739] dispatch_queue_t is not upcastable to dispatch_object_t #754

Closed
drewcrawford opened this issue Feb 15, 2016 · 2 comments
Closed

Comments

@drewcrawford
Copy link
Contributor

Previous ID SR-739
Radar None
Original Reporter @drewcrawford
Type Bug
Status Resolved
Resolution Won't Do
Environment

Linux x64
swift-DEVELOPMENT-SNAPSHOT-2016-02-08-a

Additional Detail from JIRA
Votes 0
Component/s libdispatch
Labels Bug
Assignee dgrove-oss (JIRA)
Priority Medium

md5: 7a05c4859f5cb697454da6ee8894f864

Issue Description:

The following program compiles on Darwin:

let t: dispatch_queue_t! = nil
let a: dispatch_object_t! = t

and not on Linux:

error: cannot convert value of type 'dispatch_queue_t!' to specified type 'dispatch_object_t!'
let a: dispatch_object_t! = t
@swift-ci
Copy link

Comment by David Grove (JIRA)

I submitted #61 which fixes this issue.

@swift-ci
Copy link

Comment by David Grove (JIRA)

made obsolete by Swift 3 dispatch overlay changes.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 5, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Projects
None yet
Development

No branches or pull requests

2 participants